manifests/prod/calibre-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web-service
  namespace: app-calibre-web
spec:
  selector:
    app: calibre-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8083
